--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -14,7 +14,11 @@ section {
 }
 
 #main_content{
-    background: url("/images/background.png") repeat-y  scroll center;
+  /*  background: url("/images/background.png") repeat-y  scroll center; */
+}
+
+#incoming_msg li{
+  list-style-type: none;
 }
 
 section a{
@@ -153,5 +157,27 @@ form.new_micropost textarea {
   height: 5em;
   margin-bottom: 0;
 }
+
+#incoming_msg {
+  height: 5em;
+  width: 28.8em;
+  margin-bottom: 0;
+  overflow: auto;
+
+}
+
+#chat_tab{
+/*  position: fixed;
+  bottom: 50px;
+  top: 400px; */
+  
+  position: absolute;
+  top: 350px;
+  width: 400px;
+  height: 100px;
+
+}
+
+
 
 
