--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,6 +28,12 @@
 
 <% content_for :friends_tab do  render 'follow_form'   end %>
 
+<% content_for :picture_of_the_day do %>
+<% if !@image.nil? %>
+ <%=  image_tag @image.photo.url(:thumb)  %>
+<% end %> 
+<% end %>
+
 <% #debugger
    if current_user?(@user)
     pending_users = @user.pending_friends   
@@ -35,5 +41,6 @@
       #debugger
       content_for :messages_tab do render pending_users end
     end 
-   end     %>
+   end     
+%>
 
